<resources>
    <string name="app_name">Serie Tracker</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="imgagedescription">Episode poster</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="registerhere">Register here!</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="name">Name:</string>
    <string name="relaeased">Released:</string>
    <string name="genre">Genre:</string>
    <string name="plot">Plot:</string>
    <string name="director">Director:</string>
    <string name="writer">Writer:</string>
    <string name="language">Language:</string>
    <string name="imdbrating">imdb rating:</string>
    <string name="season">Season:</string>
    <string name="episodenr">Episode number:</string>
    <string name="serieswatched">Series watched:</string>
    <string name="nonewatched">This user did not watch any series yet</string>
    <string name="follow">Follow</string>
    <string name="usernameplaceholder">Username: </string>
    <string name="useremailplaceholder">Email: </string>
    <string name="yourinformation">Your information</string>
    <string name="episodeplaceholder">S0E0</string>
    <string name="redexplanation">This means that you have seen episodes, that this user did not see yet. You can not discuss the last episode you have seen without giving spoilers.</string>
    <string name="greenexplanation">This means that you both have seen the same episodes or that the user is further in the serie. You can discuss the last episode you have seen without giving spoilers. </string>
    <string name="greyexplantion">This means that you do not watch this serie.</string>
    <string name="close">Close</string>
    <string name="pleaselogin">Please log in or register to see your user details</string>
    <string name="series_seen">Series seen</string>
    <string name="following">Following</string>
    <string name="log_out">Log out</string>
    <string name="robot">Robot</string>
</resources>
