<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ExampleRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/episodeplaceholder"
            android:textColor="@color/red" />

        <TextView
            android:id="@+id/ExplanationRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/redexplanation"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ExampleGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/episodeplaceholder"
            android:textColor="@color/green"/>

        <TextView
            android:id="@+id/ExplanationGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/greenexplanation"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ExampleGrey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/episodeplaceholder" />

        <TextView
            android:id="@+id/ExplanationGrey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/greyexplantion"
            android:paddingLeft="10dp"
            android:textColor="@color/black" />

    </LinearLayout>

    <Button
        android:id="@+id/CloseDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/close" />

</LinearLayout>